--- a/hipo_meal/recipes/templates/recipes/home.html
+++ b/hipo_meal/recipes/templates/recipes/home.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hipo-Meal</title>
-</head>
-<body>
+{% extends "recipes/base.html" %}
+
+{% block content %}
     {% for recipe in recipes %}
         <h1>{{ recipe.title }}</h1>
         <p>{{ recipe.content }}</p>
         <p>By {{ recipe.author }} on {{ recipe.post_date }}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
