--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="#"><i class="fas fa-drumstick-bite mr-2"></i>HipoMeal</a>
+       <a class="navbar-brand" href="{% url 'recipes-home' %}"><i class="fas fa-drumstick-bite mr-2"></i>HipoMeal</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,11 +28,11 @@
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="{% url 'recipes-home' %}">Home</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="/">Login</a>
+                    <a class="nav-link" href="#">Login</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="#">Register</a>
