--- a/hipo_meal/recipes/templates/recipes/home.html
+++ b/hipo_meal/recipes/templates/recipes/home.html
@@ -4,6 +4,6 @@
     {% for recipe in recipes %}
         <h1>{{ recipe.title }}</h1>
         <p>{{ recipe.content }}</p>
-        <p>By {{ recipe.author }} on {{ recipe.date_posted }}</p>
+        <p>By {{ recipe.author }} on {{ recipe.date_posted|date:"F d, Y" }}</p>
     {% endfor %}
 {% endblock content %}
