--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -20,13 +20,16 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="{% url 'recipes-home' %}"><i class="fas fa-drumstick-bite mr-2"></i>HipoMeal</a>
+       <a class="navbar-brand ml-4" href="{% url 'recipes-home' %}">
+           <i class="fas fa-hippo ml-4" style="color:lightgrey"></i><i class="fas fa-drumstick-bite mr-2" style="color:lightsalmon"></i></br>
+           HipoMeal
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse ml-4" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'recipes-home' %}">Home</a>
