--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -21,7 +21,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <a class="navbar-brand ml-4" href="{% url 'recipes-home' %}">
-           <i class="fas fa-hippo ml-4" style="color:lightgrey"></i><i class="fas fa-drumstick-bite mr-2" style="color:lightsalmon"></i></br>
+           <i class="fas fa-hippo ml-4" style="color:lightgrey;transform:scale(2);z-index:1;"></i>
+           <i class="fas fa-drumstick-bite ml-2" style="color:lightsalmon;transform:scale(1.2);"></i></br>
            HipoMeal
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
