--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="#">Login</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#">Register</a>
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0 w-50 justify-content-end">
