--- a/hipo_meal/users/templates/users/register.html
+++ b/hipo_meal/users/templates/users/register.html
@@ -1,4 +1,5 @@
 {% extends "recipes/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <div class="content-section">
@@ -6,7 +7,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Are you hungry? Register now!</legend>
-                {{ registration_form.as_p }}
+                {{ registration_form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info", type="submit">Sign Up</button>
