--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="{% url 'recipes-home' %}">Home</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
