--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -35,12 +35,24 @@
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'recipes-home' %}">Home</a>
                 </li>
+                {% if not user.is_authenticated %}
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
+                {% else %}
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="{% url 'recipes-home' %}">Create Recipe</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="{% url 'recipes-home' %}">My Recipes</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% endif %}
             </ul>
             <form class="form-inline my-2 my-lg-0 w-50 justify-content-end">
                 <input class="form-control mr-sm-2 w-50" type="search" placeholder="Dishes, Ingredients or Keywords" aria-label="Search">
