--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -50,6 +50,9 @@
                     <a class="nav-link" href="{% url 'recipes-home' %}">My Recipes</a>
                 </li>
                 <li class="nav-item mx-2">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 {% endif %}
