Change recipe html

--- a/hipo_meal/recipes/templates/recipes/home.html
+++ b/hipo_meal/recipes/templates/recipes/home.html
@@ -2,9 +2,28 @@
 
 {% block content %}
     {% for recipe in recipes %}
-        <h1>{{ recipe.title }}</h1>
-        <p>{{ recipe.content }}</p>
-        <p>By <img src="{{ recipe.author.profile.image.url }}" class="rounded-circle thumbnail mb-1" style="height: 20px; width: 20px;">
-            {{ recipe.author }} on {{ recipe.date_posted|date:"F d, Y" }}</p>
+    <div class="card w-50 mb-2">
+        <img class="card-img-top" src="" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">
+                <a href="{% url 'recipe-detail' recipe.id %}"
+                class="text-danger"
+                style="text-decoration: none;">
+                    {{ recipe.title }}
+                </a>
+            </h5>
+            <p class="card-text">{{ recipe.content }}</p>
+            <p class="card-text">
+                <small class="text-muted">
+                    By
+                    <img src="{{ recipe.author.profile.image.url }}"
+                    class="rounded-circle thumbnail mb-1"
+                    style="height: 20px; width: 20px;">
+                    {{ recipe.author }} on {{ recipe.date_posted|date:"F d, Y" }}
+                </small>
+            </p>
+        </div>
+    </div>
+    </a>
     {% endfor %}
 {% endblock content %}
