--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <a class="navbar-brand ml-4" href="{% url 'recipes-home' %}">
            <i class="fas fa-hippo ml-4" style="color:lightgrey;transform:scale(2);z-index:1;"></i>
@@ -44,7 +44,7 @@
                 </li>
                 {% else %}
                 <li class="nav-item mx-2">
-                    <a class="nav-link" href="{% url 'recipes-home' %}">Create Recipe</a>
+                    <a class="nav-link" href="{% url 'recipe-create' %}">Create Recipe</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link" href="{% url 'recipes-home' %}">My Recipes</a>
@@ -71,8 +71,15 @@
                 </div>
             {% endfor %}
         {% endif %}
-        {% block content %}
-        {% endblock content%}
+        <div class="row">
+            <div class="col">
+                {% block content %}
+                {% endblock content%}
+            </div>
+            <div class="col">
+                
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
