--- a/hipo_meal/recipes/templates/recipes/home.html
+++ b/hipo_meal/recipes/templates/recipes/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for recipe in recipes %}
-    <div class="card w-50 mb-2">
+    <div class="card mb-2">
         <img class="card-img-top" src="" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">
@@ -24,6 +24,18 @@
             </p>
         </div>
     </div>
-    </a>
     {% endfor %}
+    <div class="pagination justify-content-center my-4 ">
+        <span class="page-links">
+            {% if page_obj.has_previous %}
+                <a href="/?page={{ page_obj.previous_page_number }}" class="btn btn-info btn-sm mr-2"><</a>
+            {% endif %}
+            <span class="page-current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+            </span>
+            {% if page_obj.has_next %}
+                <a href="/?page={{ page_obj.next_page_number }}" class="btn btn-info btn-sm ml-2">></a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock content %}
