--- a/hipo_meal/recipes/templates/recipes/recipe_detail.html
+++ b/hipo_meal/recipes/templates/recipes/recipe_detail.html
@@ -1,7 +1,7 @@
 {% extends "recipes/base.html" %}
 
 {% block content %}
-    <div class="card w-50">
+    <div class="card">
         <img class="card-img-top" src="" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title text-danger">{{ recipe.title }}</h5>
