--- a/hipo_meal/recipes/templates/recipes/recipe_detail.html
+++ b/hipo_meal/recipes/templates/recipes/recipe_detail.html
@@ -4,15 +4,18 @@
     <div class="card">
         <img class="card-img-top" src="" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title text-danger">{{ recipe.title }}</h5>
-            <p class="card-text">{{ recipe.content }}</p>
+            <h5 class="card-title text-danger">{{ object.title }}</h5>
+            <p class="card-text">{{ object.content }}</p>
             <p class="card-text">
                 <small class="text-muted">
                     By
                     <img src="{{ recipe.author.profile.image.url }}" class="rounded-circle thumbnail mb-1"
                         style="height: 20px; width: 20px;">
-                    {{ recipe.author }} on {{ recipe.date_posted|date:"F d, Y" }}
+                    {{ object.author }} on {{ object.date_posted|date:"F d, Y" }}
                 </small>
+                {% if object.author == user %}
+                aaa
+                {% endif%}
             </p>
         </div>
     </div>
