--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -77,7 +77,7 @@
                 {% endblock content%}
             </div>
             <div class="col">
-                
+                top ingredients
             </div>
         </div>
     </div>
