Change column sizes of grid system

--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -72,11 +72,11 @@
             {% endfor %}
         {% endif %}
         <div class="row">
-            <div class="col">
+            <div class="col-8">
                 {% block content %}
                 {% endblock content%}
             </div>
-            <div class="col">
+            <div class="col-4">
                 top ingredients
             </div>
         </div>
