Add search functionality

--- a/hipo_meal/recipes/templates/recipes/home.html
+++ b/hipo_meal/recipes/templates/recipes/home.html
@@ -25,16 +25,17 @@
         </div>
     </div>
     {% endfor %}
+    {% load recipes_custom_templates %}
     <div class="pagination justify-content-center my-4 ">
         <span class="page-links">
             {% if page_obj.has_previous %}
-                <a href="/?page={{ page_obj.previous_page_number }}" class="btn btn-info btn-sm mr-2"><</a>
+                <a href="/?{% url_replace request 'page' page_obj.previous_page_number %}" class="btn btn-info btn-sm ml-2"><</a>
             {% endif %}
             <span class="page-current">
                 Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
             </span>
             {% if page_obj.has_next %}
-                <a href="/?page={{ page_obj.next_page_number }}" class="btn btn-info btn-sm ml-2">></a>
+                <a href="/?{% url_replace request 'page' page_obj.next_page_number %}" class="btn btn-info btn-sm ml-2">></a>
             {% endif %}
         </span>
     </div>
