--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -19,6 +19,13 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body class="bg-light">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
        <a class="navbar-brand ml-4" href="{% url 'recipes-home' %}">
            <i class="fas fa-hippo ml-4" style="color:lightgrey;transform:scale(2);z-index:1;"></i>
@@ -57,10 +64,11 @@
                 </li>
                 {% endif %}
             </ul>
-            <form class="form-inline my-2 my-lg-0 w-50 justify-content-end">
-                <input class="form-control mr-sm-2 w-50" type="search" placeholder="Dishes, Ingredients or Keywords" aria-label="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <div class="form-inline my-2 my-lg-0 w-50 justify-content-end">
+                <input class="form-control mr-sm-2 w-50" type="search" id="search-key"
+                placeholder="Dishes, Ingredients or Keywords" aria-label="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" onclick="search();">Search</button>
+            </div>
         </div>
     </nav>
     <div class="container mt-2">
@@ -109,13 +117,20 @@
             </div>
         </div>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script>
+        function search() {
+            searchKey = $("#search-key").val();
+            window.location.href = "?search_key=" + searchKey;
+        }
+        
+        $(document).ready(function () {
+            $("#search-key").on('keypress', function (event) {
+                if (event.which == 13) {
+                    event.preventDefault();
+                    search();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
