--- a/hipo_meal/recipes/templates/recipes/base.html
+++ b/hipo_meal/recipes/templates/recipes/base.html
@@ -89,9 +89,11 @@
                 {% get_top_ingredients as top_ingredients %}
                 <ul class="list-group w-50 float-right">
                     {% for ingredient in top_ingredients %}
-                    <li class="list-group-item list-group-item-info">
+                    <a href="/?ingredient={{ingredient.name}}" style="text-decoration: none;">
+                        <li class="list-group-item list-group-item-info">
                         {{ingredient.name}} ({{ingredient.count}})
-                    </li>
+                        </li>
+                    </a>
                     {% endfor %}
                 </ul>
             </div>
